--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "iotacss-pull",
-  "version": "0.1.3",
+  "name": "iotacss-utils-pull",
+  "version": "1.0.0",
   "description": "Pull utility for iotaCSS",
   "main": "_utilities.pull.scss",
   "repository": {
@@ -11,12 +11,8 @@
     "iotacss",
     "css",
     "bem",
+    "sass",
     "oocss"
   ],
-  "dependencies": {
-    "iotacss-default": "0.1.0",
-    "iotacss-breakpoint": "0.1.0",
-    "iotacss-column": "0.1.0"
-  },
   "author": "Dimitris Psaropoulos <info@harby.me>"
 }
